--- a/share/examples/urcsts.include/setrans.conf
+++ b/share/examples/urcsts.include/setrans.conf
@@ -12,4 +12,4 @@
 
 # Demonstrate Include by moving everthing to an include file
 #
-Include=/etc/selinux/mls/setrans.d/u
+Include=/etc/selinux/mls/setrans.d/*.conf
