Cleanup test and configurations that now are in share/examples. Add nato example and test.

--- a/share/examples/pipes/setrans.conf
+++ b/share/examples/pipes/setrans.conf
@@ -1,5 +1,5 @@
 
-Domain=Test
+Domain=PipesTest
 
 s0=SystemLow
 s15:c0.c1023=SystemHigh
@@ -17,7 +17,4 @@ s4:c200.c511=S
 s5:c200.c511=Top Secret
 s5:c200.c511=TS
 
-Include=/etc/selinux/mls/setrans.d/ab.conf
-Include=/etc/selinux/mls/setrans.d/rel.conf
-Include=/etc/selinux/mls/setrans.d/eyes-only.conf
 Include=/etc/selinux/mls/setrans.d/pipes.conf
